package de.exxcellent.challenge.Application;

public interface FootballDataAccessInterface {
    String teamSmallestDifference() throws Exception;
}
