package de.exxcellent.challenge.Application;

public interface WeatherDataAccessInterface {
    String getDaySmallestTempSpread() throws Exception;
}
